# cold-email

./: .gitignore  DESIGN.md  EVENTBUS.md  LICENSE  README.md  README_CN.md  SQLITE.md  requirements.txt
workflow/: .env.example  dashboard.py  main.py  pyproject.toml  requirements.txt  run_email.py  run_intake.py  run_research.py
workflow/agents/: agent0_intake.py  agent1_search.py  agent2_research.py  agent3_resume.py  agent4_email.py  agent5_send.py
workflow/config/: domains.json  settings.py
workflow/data/: user_profile.json
workflow/data/professors/: raw_list.json
workflow/latex/project_pool/: project_01.tex  project_02.tex  project_03.tex
workflow/latex/resume_template/: template.tex
workflow/outputs/emails/: alice_johnson_email.txt  angela_schoellig_email.txt  christopher_d_manning_email.txt  florian_shkurti_email.txt  graham_neubig_email.txt  integration_tester_email.txt  jonathan_kelly_email.txt  olga_vechtomova_email.txt  regina_barzilay_email.txt  steven_waslander_email.txt  tim_barfoot_email.txt  yejin_choi_email.txt
workflow/outputs/tailored_resumes/: alice_johnson_resume.tex  angela_schoellig_resume.tex  christopher_d_manning_resume.tex  florian_shkurti_resume.tex  graham_neubig_resume.tex  integration_tester_mocked_resume.tex  jonathan_kelly_resume.tex  olga_vechtomova_resume.tex  regina_barzilay_resume.tex  steven_waslander_resume.tex  tim_barfoot_resume.tex  unknown_prof_resume.tex  (+1 more)
workflow/skills/: event_bus.py  gmail_mailer.py  intent_router.py  latex_utils.py  llm_client.py  project_matcher.py  send_tracker.py  web_search.py
(+13 files in other folders)
