[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cold-email-workflow"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.30.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "scikit-learn>=1.3.0",
    "python-dotenv>=1.0.0",
    "duckduckgo-search>=6.0.0",
    "textual>=0.61.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.130.0",
    "backoff>=2.2.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "skills*", "config*"]
